--- a/journal/201808.md
+++ b/journal/201808.md
@@ -184,7 +184,7 @@ Highlights:
 * Project fund transparency and constitution were extensively discussed on [Reddit](https://www.reddit.com/r/decred/comments/96j9ai/transparency_in_payments_made_with_the_community/) and in [#general](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153410896753432nExMw:decred.org).
 * [Pre-proposal](https://www.reddit.com/r/decred/comments/98lgwt/preproposal_the_first_politeia_proposalvote/) to use Politeia to approve Politeia as a legitimate decision-making tool for Decred.
 
-Reddit and Forum: substantive discussion about Decred [cons](https://www.reddit.com/r/decred/comments/94ivq5/decred_cons/); ecosystem [fund](https://www.reddit.com/r/decred/comments/953nwz/decred_ecosystem_fund_question/); a [thread](https://www.reddit.com/r/decred/comments/98fywg/decreds_politeia_and_amazing_autonomous_governance/) about voter engagement, Politeia UX and trolling; [idea](https://www.reddit.com/r/decred/comments/99jmoq/dcrsocial_a_plus_social_media_for_decred_project/) of a social media system for Decred by @michae2xl; [how profitable](https://www.reddit.com/r/decred/comments/9alvyz/is_it_even_worth_purchasing_the_dcr1_to_mine/) is the Obelisk DCR1.
+Reddit: substantive discussion about [Decred cons](https://www.reddit.com/r/decred/comments/94ivq5/decred_cons/); ecosystem [fund](https://www.reddit.com/r/decred/comments/953nwz/decred_ecosystem_fund_question/); a [thread](https://www.reddit.com/r/decred/comments/98fywg/decreds_politeia_and_amazing_autonomous_governance/) about voter engagement, Politeia UX and trolling; [idea](https://www.reddit.com/r/decred/comments/99jmoq/dcrsocial_a_plus_social_media_for_decred_project/) of a social media system for Decred by @michae2xl; [how profitable](https://www.reddit.com/r/decred/comments/9alvyz/is_it_even_worth_purchasing_the_dcr1_to_mine/) is the Obelisk DCR1.
 
 Chats: cross-chain [trading](https://riot.im/app/#/room/!MfifnUCLrfSeRkMDwZ:decred.org/$153315325947965TiRLy:decred.org) via LN; [plans](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153317267348142YycAs:decred.org) for contractor management system, lower-level decision making and contractor privacy vs transparency for stakeholders; [measuring](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153322272548457woVQD:decred.org) dev activity; [what if](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153323194548585HHCQS:decred.org) the network stalls, multiple implementations of Decred for more resilience, long term vision behind those extensive tests and accurate comments in the codebase; [ideas](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/$153327969148851WDEWg:decred.org) for process for policy documents, hosting them in Pi and approving with ticket voting; [about](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$1533582725405DqzDt:zettaport.com) SPV wallet disk size, how compact filters work; [odds](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$153378940451742eumld:decred.org) of a wallet to fetch a wrong block in SPV; new [module system](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153385446352375nNCzg:decred.org) in Go; [security](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153394851052869tucYe:decred.org) of allowing Android app backups; [why](https://riot.im/app/#/room/!NNzHoaSdnsbZDQOXJr:decred.org/$153409911653370oCvhJ:decred.org) PoW algo change proposal must be specified in great detail; [thoughts](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153432628255090APtWJ:decred.org) about [NIPoPoWs](https://eprint.iacr.org/2017/963) and SPV; [prerequisites](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153433879355141udYDe:decred.org) for shipping SPV by default ([continued](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$15356464972893wubQn:decred.org)); Decred vs Dash treasury and marketing [expenses](https://riot.im/app/#/room/!zxBsqZRxjbQoLqJRwe:decred.org/$153434282455193CVEFR:decred.org), spending other people's money; [why](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$153453353055716yshds:decred.org) Decred should not invade a country, DAO and nation states, entangling with nation state is poor resource allocation; [how](https://riot.im/app/#/room/!wSdymYrEpBhsWlDJuk:decred.org/$153458242155930Qncyb:decred.org) winning tickets are determined and attack vectors; [Politeia](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/$153455653755840KhCTV:decred.org) proposal moderation, contractor clearance, the scale of proposals and decision delegation, initial Politeia vote to approve Politeia itself; [chat systems](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153478648556684iKADS:decred.org), Matrix/Slack/Discord/RocketChat/Keybase ([continued](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$1535216745397gPsON:zettaport.com)); [overview](https://riot.im/app/#/room/!OfChXgczrIlpEZSFAv:decred.org/$153490307657191zOrLq:decred.org) of Korean exchanges; no [breaking changes](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153496073957423GaxvC:decred.org) in vgo; [why](https://riot.im/app/#/room/!VFRvyndKpzcLrVslQD:decred.org/$153496964357581puIAD:decred.org) project fund burn rate must keep low; [asymptotic](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153520054958429Jqwut:decred.org) behavior of Decred and other ccs, tail emission; count of [full nodes](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153529715258849rjuSm:decred.org) and incentives to run them; Politeia proposal [translations](https://riot.im/app/#/room/!VFRvyndKpzcLrVslQD:decred.org/$153535615958948fQNVf:decred.org) and multilingual environment.
 
@@ -192,11 +192,7 @@ An unusual event was the chat about double negatives and other oddities in langu
 
 # Markets
 
-{markets overview: USD and BTC prices, highs and lows, interesting events}
-
-Aug 14 huge drop everywhere, top 100 cryptos lost ~5-30%, Bitcoin went below 6k and the overall market below 200b, according to cmc. All together with Bitcoin dominance to 53%+. Decred lost ~17% and dropped to 0.0056 BTC and 33 USD.
-
-Around Aug 24, Huobi showed a trading volume $5m+ for DCR.
+DCR started the month at USD 56 / BTC 0.0073 and had a two week decline. On Aug 14 the whole market took a [huge drop](https://archive.today/K5buy) and briefly went below USD 200B. Bitcoin went below USD 6,000 and top 100 cryptos lost 5-30%. The lowest point coincided with Bitcoin dominance peak at 54.5%. On that day Decred dived -17% and reached the bottom of USD 32 / BTC 0.00537. Since then it wend sidelines in the USD 35-45 / BTC 0.0054-0.0064 range. Around Aug 24, Huobi showed DCR trading volume above USD 5M and coincided with a minor recovery.
 
 [@ImacallyouJawdy](https://twitter.com/ImacallyouJawdy) posted some creative analysis based on ticket data. 
 
