--- a/journal/201808.md
+++ b/journal/201808.md
@@ -198,25 +198,19 @@ DCR started the month at USD 56 / BTC 0.0073 and had a two week decline. On Aug 
 
 # Relevant External
 
-{PoW and ASIC resistance news}
-
-{governance-related news not mentioned in Community Discussions}
-
-{related exchanges and websites news}
-
-Reddit [was hacked](https://www.wired.com/story/reddit-hacked-thanks-to-woefully-insecure-two-factor-setup/) by intercepting 2FA codes sent via SMS. The [announcement](https://www.reddit.com/r/announcements/comments/93qnm5/we_had_a_security_incident_heres_what_you_need_to/) explains the impact. Yet another [data breach](https://en.wikipedia.org/wiki/List_of_data_breaches) suggests to think twice before sharing any data with any company and shift to more secure authentication systems.
+StopAndDecrypt [published](https://hackernoon.com/asic-resistance-is-nothing-but-a-blockchain-buzzword-b91d3d770366) an extensive article "ASIC Resistance is Nothing but a Blockchain Buzzword" that is much in line with Decred's stance on ASICs.
 
 The ongoing [debates](https://www.reddit.com/r/siacoin/comments/990ga9/siacoin_obelisk_fork_is_no_better_than_ethereum/) about the possible Sia [fork](https://www.reddit.com/r/siacoin/comments/94ji0q/a_community_proposal_to_resolve_the_obelisk/) yet again demonstrate the importance of a robust dispute resolution mechanism. Also, we are [lucky](https://www.reddit.com/r/siacoin/comments/956k6g/community_fork_proposal_detail_discussion_dev_fee/) to have the treasury.
 
-{ASIC resistance buzzword article by stopanddecrypt}
+Mark B Lundeberg, who [found](https://github.com/decred/atomicswap/issues/58) a vulnerability in atomicswap earlier, [published](https://www.reddit.com/r/btc/comments/8yp6gd/my_newest_a_way_to_perform_p2p_atomic_swaps/) a concept of more private peer-to-peer atomic swaps. (missed in July issue).
 
-Vietnam ban mining equipment import https://icobrothers.media/2018/08/14/vietnamese-authorities-have-officially-banned-mining-equipment-import/
+Medium took a [cautious stance](https://help.medium.com/hc/en-us/articles/360000646167-Cryptocurrencies-on-Medium) on cryptocurrencies and triggered at least one project to [migrate](https://blog.aragon.org/aragon-against-censorship-goodbye-medium-hello-ghost/) to Ghost (that same project previously [migrated](https://blog.aragon.org/announcing-our-migration-to-an-open-source-messaging-platform-420b25e74284/) away from Slack).
 
-Medium cc policy https://help.medium.com/hc/en-us/articles/360000646167-Cryptocurrencies-on-Medium triggering one cc project to migrate to ghost https://blog.aragon.org/aragon-against-censorship-goodbye-medium-hello-ghost/
+Regulation: Vietnam [bans](https://icobrothers.media/2018/08/14/vietnamese-authorities-have-officially-banned-mining-equipment-import/) mining equipment import, China [halts](https://www.asiacryptotoday.com/china-halts-hosting-of-crypto-events-in-beijing-bans-crypto-news-accounts-on-wechat/) crypto events and tightens control of crypto chat groups.
+
+Reddit [was hacked](https://www.wired.com/story/reddit-hacked-thanks-to-woefully-insecure-two-factor-setup/) by intercepting 2FA codes sent via SMS. The [announcement](https://www.reddit.com/r/announcements/comments/93qnm5/we_had_a_security_incident_heres_what_you_need_to/) explains the impact. Yet another [data breach](https://en.wikipedia.org/wiki/List_of_data_breaches) suggests to think twice before sharing any data with any company and shift to more secure authentication systems.
 
 Intel and x86 dumpsterfire [keeps burning](https://marc.info/?l=openbsd-tech&m=153504937925732&w=2) brighter. Seek for more secure hardware and operating systems for your coins.
-
-https://www.reddit.com/r/btc/comments/8yp6gd/my_newest_a_way_to_perform_p2p_atomic_swaps/ (missed in July issue).
 
 Finally, almost unrelated to Decred but too good to not share: [yetanotherico.com](http://yetanotherico.com/).
 
