--- a/journal/201808.md
+++ b/journal/201808.md
@@ -40,7 +40,7 @@ The upcoming v3.0 entered beta and is deployed on [beta.dcrdata.org](https://bet
 
 @Richard-Red created a [concept repository](https://github.com/RichardRed0x/governance-docs) with policy documents that should only be changed with voter approval.
 
-[decred.org](https://github.com/decred/dcrweb): 8 [contributors](https://decred.org/contributors/) added and 4 removed, including advisors (discussion [here](https://github.com/decred/dcrweb/issues/316)).
+[decred.org](https://github.com/decred/dcrweb): 8 [contributors](https://decred.org/contributors/) added and 4 removed, including 2 advisors (discussion [here](https://github.com/decred/dcrweb/issues/316)).
 
 [decredmarketcap.com](https://decredmarketcap.com/) is a brand new website that shows the most accurate DCR market data. Clean design, mobile friendly, no javascript required.
 
