--- a/journal/201808.md
+++ b/journal/201808.md
@@ -22,9 +22,9 @@ Comments are welcome for the [proposal](https://github.com/decred/dcrd/issues/14
 
 [Decrediton](https://github.com/decred/decrediton): Version [1.3.0 RC1](https://github.com/decred/decred-binaries/releases/tag/v1.3.0-rc1) adds the new SPV sync mode that syncs rougly 5x faster. The feature is off by default while it receives more testing and feedback from experienced users. Other notable changes are design polish and experimental Politeia integration.
 
-[Politeia](https://github.com/decred/politeia): an important feature required for the release is the ability to edit proposals, is now [in development](https://github.com/decred/politeiagui/pull/515) and has [short demo](https://twitter.com/marco_peereboom/status/1032753235927425024). Developers might like this [architecture diagram](https://twitter.com/oxfernando/status/1033390103534751746).
+[Politeia](https://github.com/decred/politeia): The ability to edit proposals, an important feature required for release, is [being developed](https://github.com/decred/politeiagui/pull/515) and has a [short demo](https://twitter.com/marco_peereboom/status/1032753235927425024). Developers might like this [architecture diagram](https://twitter.com/oxfernando/status/1033390103534751746).
 
-@degeri joined to perform security testing of Politeia and found [several](https://github.com/decred/politeia/issues/414) [issues](https://github.com/decred/politeiagui/issues/501).
+@degeri joined to perform security testing of Politeia and found [several issues](https://github.com/decred/politeiagui/issues?q=is%3Aissue+author%3Adegeri).
 
 [dcrdata](https://github.com/decred/dcrdata): mainnet explorer upgraded to v2.1 with several new features. For users: credit/debit tx filter on address page, showing miner fees on coinbase transaction page, estimate yearly ticket rewards on [main page](https://explorer.dcrdata.org/), cool new hamburger menu and keyboard navigation. For developers: new [chain parameters](https://explorer.dcrdata.org/parameters) page, experimental Insight API support, endpoints for coin supply and block rewards, testnet3 support. Lots of minor API changes and frontend tweaks, many bug fixes and robustness improvements.
 
@@ -50,7 +50,7 @@ Dev activity stats for {MONTH}: {} active PRs, {} master commits, {} added and {
 
 Hashrate: went from 54 to 76 PH/s, the low was 50 and the new all-time high is 100 PH/s. BeePool share rose to ~50% while F2Pool shrinked to 30%, followed by coinmine.pl at 5% and Luxor at 3%.
 
-Staking: 30-day average ticket price is 95.6 DCR (+3.0) as of Aug 3. During the month, ticket price varied between the high and low of 92.2 and 100.5 DCR respectively. Locked DCR held between 3.80 and 3.90 million or 46.3-46.9% of the supply.
+Staking: 30-day average ticket price is 95.6 DCR (+3.0) as of Aug 3. During the month, ticket price varied between the low and high of 92.2 and 100.5 DCR respectively. Locked DCR held between 3.80 and 3.90 million or 46.3-46.9% of the supply.
 
 Nodes: there are 217 public listening and 281 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 2% at v1.4.0(pre) (dev builds), 5% on v1.3.0 (RC1), 62% on v1.2.0 (-5%), 22% on v1.1.2 (-2%), 6% on v1.1.0 (-1%). Almost 69% of nodes are v.1.2.0 and higher and support client filters. Data snapshot of Aug 31.
 
@@ -192,7 +192,7 @@ An unusual event was the chat about double negatives and other oddities in langu
 
 # Markets
 
-DCR started the month at USD 56 / BTC 0.0073 and had a two week decline. On Aug 14 the whole market took a [huge drop](https://archive.today/K5buy) and briefly went below USD 200B. Bitcoin went below USD 6,000 and top 100 cryptos lost 5-30%. The lowest point coincided with Bitcoin dominance peak at 54.5%. On that day Decred dived -17% and reached the bottom of USD 32 / BTC 0.00537. Since then it went sidelines in the USD 35-45 / BTC 0.0054-0.0064 range. Around Aug 24, Huobi showed DCR trading volume above USD 5M and this coincided with a minor recovery.
+DCR started the month at USD 56 / BTC 0.0073 and had a two week decline. On Aug 14 the whole market took a [huge drop](https://archive.today/K5buy) and briefly went below USD 200B. Bitcoin went below USD 6,000 and top 100 cryptos lost 5-30%. The lowest point coincided with Bitcoin dominance peak at 54.5%. On that day Decred dived -17% and reached the bottom of USD 32 / BTC 0.00537. Since then it went sideways in the USD 35-45 / BTC 0.0054-0.0064 range. Around Aug 24, Huobi showed DCR trading volume above USD 5M and this coincided with a minor recovery.
 
 [@ImacallyouJawdy](https://twitter.com/ImacallyouJawdy) posted some creative analysis based on ticket data. 
 
