--- a/journal/201808.md
+++ b/journal/201808.md
@@ -50,7 +50,7 @@ Dev activity stats for {MONTH}: {} active PRs, {} master commits, {} added and {
 
 Hashrate: went from 54 to 76 PH/s, the low was 50 and the new all-time high is 100 PH/s. BeePool share rose to ~50% while F2Pool shrank to 30%, followed by coinmine.pl at 5% and Luxor at 3%.
 
-Staking: 30-day average ticket price is 95.6 DCR (+3.0) as of Aug 3. During the month, ticket price fluctuated between a low of 92.2 and high of 100.5 DCR. Locked DCR represented between 3.8 and 3.9 million or 46.3-46.9% of the supply.
+Staking: 30-day average ticket price is 95.6 DCR (+3.0) as of Sep 3. During the month, ticket price fluctuated between a low of 92.2 and high of 100.5 DCR. Locked DCR represented between 3.8 and 3.9 million or 46.3-46.9% of the supply.
 
 Nodes: there are 217 public listening and 281 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 2% at v1.4.0(pre) (dev builds), 5% on v1.3.0 (RC1), 62% on v1.2.0 (-5%), 22% on v1.1.2 (-2%), 6% on v1.1.0 (-1%). Almost 69% of nodes are v.1.2.0 and higher and support client filters. Data snapshot of Aug 31.
 
@@ -221,8 +221,8 @@ This is the 5th issue of Decred Journal. It is mirrored on [GitHub]({}) and [Red
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
-Feedback is appreciated: please comment on [Reddit]({}), [GitHub](https://github.com/xaur/decred-news/issues) or [#writers_room](https://decred.slack.com/messages/C9HC2NVTM/).
+Feedback is appreciated: please comment on [Reddit]({}), [GitHub](https://github.com/xaur/decred-news/issues) or #writers_room on [Matrix](https://riot.im/app/#/room/!lbzTjhzNbIaDbuAxkS:decred.org) or [Slack](https://decred.slack.com/messages/C9HC2NVTM/).
 
 Contributions are welcome too. Some areas are collecting content, pre-release review or translations to other languages. Check out @Richard-Red's [guide](https://medium.com/@richardred/introduction-to-github-for-non-coders-f5614edd64c0) how to contribute to Decred using GitHub without writing code.
 
-Credits (Slack names, alphabetical order): {}, {} and {}.
+Credits (Slack names, alphabetical order): bee, Haon, jazzah and Richard-Red.
