--- a/journal/201808.md
+++ b/journal/201808.md
@@ -225,4 +225,4 @@ Feedback is appreciated: please comment on [Reddit]({}), [GitHub](https://github
 
 Contributions are welcome too. Some areas are collecting content, pre-release review or translations to other languages. Check out @Richard-Red's [guide](https://medium.com/@richardred/introduction-to-github-for-non-coders-f5614edd64c0) how to contribute to Decred using GitHub without writing code.
 
-Credits (Slack names, alphabetical order): {}, {} and {}.
+Credits (Slack names, alphabetical order): bee, Haon, jazzah and Richard-Red.
