--- a/journal/201808.md
+++ b/journal/201808.md
@@ -20,7 +20,7 @@ Comments are welcome for the [proposal](https://github.com/decred/dcrd/issues/14
 
 [dcrwallet](https://github.com/decred/dcrwallet): Version [1.3.0 RC1](https://github.com/decred/decred-binaries/releases/tag/v1.3.0-rc1) features new SPV sync mode, new ticket buyer, new APIs for Decrediton and a host of bug fixes. On the dev side, dcrwallet also [migrated](https://github.com/decred/dcrwallet/pull/1238) to the new module system.
 
-[Decrediton](https://github.com/decred/decrediton): Version [1.3.0 RC1](https://github.com/decred/decred-binaries/releases/tag/v1.3.0-rc1) adds the new SPV sync mode that syncs roughly 5x faster. The feature is off by default while it receives more testing from experienced users. Other notable changes are design polish and experimental Politeia integration.
+[Decrediton](https://github.com/decred/decrediton): Version [1.3.0 RC1](https://github.com/decred/decred-binaries/releases/tag/v1.3.0-rc1) adds the new SPV sync mode that syncs roughly 5x faster. The feature is off by default while it receives more testing from experienced users. Other notable changes include a design polish and experimental Politeia integration.
 
 [Politeia](https://github.com/decred/politeia): Proposal editing is [being developed](https://github.com/decred/politeiagui/pull/515) and has a [short demo](https://twitter.com/marco_peereboom/status/1032753235927425024). This will allow proposal owners to edit their proposal in response to community feedback before voting begins. The challenges associated with this feature relate to updating censorship tokens and maintaining a clear history of which version comments were made  on. @fernandoabolafio produced this [architecture diagram](https://twitter.com/oxfernando/status/1033390103534751746) which may be of interest to developers.
 
@@ -77,7 +77,7 @@ Two mobile wallets integrated Decred:
 * [Coinomi](https://www.coinomi.com/) [added](https://twitter.com/decredproject/status/1034878463323394050) Decred to their Android and iOS wallets. In addition to the Apple App Store and Google Play you can [download](https://www.coinomi.com/downloads/) the APK directly. Coinomi [features](https://unblock.net/coinomi-wallet-review/) an integrated cryptocurrency exchange and is the first company to offer a mobile Decred wallet.
 * [BitBill](https://www.bitbill.com/) Android and iOS wallet also [added](https://twitter.com/bitbillwallet/status/1032940076190167040) Decred.
 
-Reminder: do your best to understand the security and privacy model before using any wallet software. Points to consider: who controls the seed, does the wallet talk to the nodes directly or via middlemen, is it open source or not.
+Reminder: do your best to understand the security and privacy model before using any wallet software. Points to consider: who controls the seed, does the wallet talk to the nodes directly or via middlemen, is it open source or not?
 
 # Adoption
 
@@ -225,4 +225,4 @@ Feedback is appreciated: please comment on [Reddit]({}), [GitHub](https://github
 
 Contributions are welcome too. Some areas are collecting content, pre-release review or translations to other languages. Check out @Richard-Red's [guide](https://medium.com/@richardred/introduction-to-github-for-non-coders-f5614edd64c0) how to contribute to Decred using GitHub without writing code.
 
-Credits (Slack names, alphabetical order): bee, Haon, jazzah and Richard-Red.
+Credits (Slack names, alphabetical order): bee, Haon, jazzah and Richard-Red, thedecreddigest.
