--- a/journal/201808.md
+++ b/journal/201808.md
@@ -1,4 +1,4 @@
-# {DRAFT} Decred Journal – August 2018 {DRAFT}
+# Decred Journal – August 2018
 
 ![Marco at Voice of Blockchain](../img/blockchainvoice-300.jpg "Marco at Voice of Blockchain")
 
@@ -44,7 +44,7 @@ The upcoming v3.0 entered beta and is deployed on [beta.dcrdata.org](https://bet
 
 [decredmarketcap.com](https://decredmarketcap.com/) is a brand new website that shows the most accurate DCR market data. Clean design, mobile friendly, no javascript required.
 
-Dev activity stats for {MONTH}: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({}))
+Dev activity stats for August: 239 active PRs, 219 commits, 25k added and 11k deleted lines spread across 8 repositories. Contributions came from 2-10 developers per repository. ([chart](https://twitter.com/decredproject/status/1037718562842927104))
 
 # Network
 
@@ -88,14 +88,13 @@ Merchants:
 
 # Marketing
 
-{month} targeted advertising report [released]({}). Reach @{} for full version.
-
 Contribution to the [@decredproject](https://twitter.com/decredproject) Twitter account has evolved over the past few months. A #twitter_ops channel is being used on Matrix to collaboratively draft and execute project account tweets (including retweets). Anyone with an interest in contributing to the Twitter account can ask for an invitation to the channel and can start contributing content and ideas there for evaluation by the Twitter group. As a result, no minority or unilateral veto over tweets is possible. (from [GitHub](https://github.com/decred/dcrweb/pull/332))
 
 # Events
 
 Attended:
 
+* Meetup in Puebla City, Mexico, organized by @elian. ([photo](https://twitter.com/Decred_MX/status/1035629279927840768), [slides](https://docs.google.com/presentation/d/1rth88w5Wtc2dRv6-ypYCYvz_cgZIQSMaDxQ4lvWLJMk/edit?usp=sharing), missed in July issue)
 * @joshuam discussed Decred and decentralized organizations with [Craig Laundy](https://twitter.com/LaundyCraigMP), Federal Minister for Small Business, the Workplace, and Deregulation with the Australian Government, at @YBFVentures. ([photos](https://twitter.com/joshuam_/status/1024849914163916801))
 * [Meetup](https://www.meetup.com/Social-at-The-Block-Cafe/events/253103196/) at [@TheBlockCafe](https://twitter.com/TheBlockCafe) in Lisbon, Portugal. @mm presented "Decred 101 - Governance with Skin in the Game" and @moo31337 talked about Decred's 2018 roadmap. (photos: [1](https://twitter.com/DeCredBAB/status/1025087786276270081) [2](https://twitter.com/marco_peereboom/status/1025088183523008512) [3](https://twitter.com/DeCredBAB/status/1025148454455140354))
 * [Meetup](https://alysida.kktix.cc/events/b-c-meetup) in Taipei, Taiwan. @morphymore made a short intro of Decred and noted: "After the talk, many have approached to tell me that they literally don’t hear of Decred until today, and are interested in finding out more about the merit of a hybrid consensus system.". Longer report [here](https://riot.im/app/#/room/!aNPTuiryMFmdMQWUzb:decred.org/$153360544050359hybnz:decred.org), some photos and a video are [here](https://photos.app.goo.gl/znay3MRCAjBY19QQ8).
@@ -193,7 +192,7 @@ An unusual event was the chat about double negatives and other oddities in langu
 
 # Markets
 
-DCR started the month at USD 56 / BTC 0.0073 and had a two week decline. On Aug 14 the whole market took a [huge drop](https://archive.today/K5buy) and briefly went below USD 200B. Bitcoin went below USD 6,000 and top 100 cryptos lost 5-30%. The lowest point coincided with Bitcoin dominance peak at 54.5%. On that day Decred dived -17% and reached the bottom of USD 32 / BTC 0.00537. Since then it went sideways in the USD 35-45 / BTC 0.0054-0.0064 range. Around Aug 24, Huobi showed DCR trading volume above USD 5M and this coincided with a minor recovery.
+DCR started the month at USD 56 / BTC 0.0073 and had a two week decline. On Aug 14 the whole market took a [huge drop](https://archive.today/K5buy) and briefly went below USD 200 billion. Bitcoin went below USD 6,000 and top 100 cryptos lost 5-30%. The lowest point coincided with Bitcoin dominance peak at 54.5%. On that day Decred dived -17% and reached the bottom of USD 32 / BTC 0.00537. Since then it went sideways in the USD 35-45 / BTC 0.0054-0.0064 range. Around Aug 24, Huobi showed DCR trading volume above USD 5M and this coincided with a minor recovery.
 
 [@ImacallyouJawdy](https://twitter.com/ImacallyouJawdy) posted some creative analysis based on ticket data. 
 
@@ -217,12 +216,12 @@ Finally, unrelated to Decred but good for a laugh: [yetanotherico.com](http://ye
 
 # About This Issue
 
-This is the 5th issue of Decred Journal. It is mirrored on [GitHub]({}) and [Reddit]({}). Past issues are available [here](https://xaur.github.io/decred-news/).
+This is the 5th issue of Decred Journal. It is mirrored on [GitHub](https://xaur.github.io/decred-news/journal/201808) and [Reddit](https://www.reddit.com/r/decred/comments/9dn9ia/decred_journal_august_2018/). Past issues are available [here](https://xaur.github.io/decred-news/).
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
-Feedback is appreciated: please comment on [Reddit]({}), [GitHub](https://github.com/xaur/decred-news/issues) or #writers_room on [Matrix](https://riot.im/app/#/room/!lbzTjhzNbIaDbuAxkS:decred.org) or [Slack](https://decred.slack.com/messages/C9HC2NVTM/).
+Feedback is appreciated: please comment on [Reddit](https://www.reddit.com/r/decred/comments/9dn9ia/decred_journal_august_2018/), [GitHub](https://github.com/xaur/decred-news/issues) or #writers_room on [Matrix](https://riot.im/app/#/room/!lbzTjhzNbIaDbuAxkS:decred.org) or [Slack](https://decred.slack.com/messages/C9HC2NVTM/).
 
 Contributions are welcome too. Some areas are collecting content, pre-release review or translations to other languages. Check out @Richard-Red's [guide](https://medium.com/@richardred/introduction-to-github-for-non-coders-f5614edd64c0) how to contribute to Decred using GitHub without writing code.
 
-Credits (Slack names, alphabetical order): bee, Haon, jazzah and Richard-Red, thedecreddigest.
+Credits (Slack names, alphabetical order): bee, Haon, jazzah, Richard-Red and thedecreddigest.
