--- a/journal/201808.md
+++ b/journal/201808.md
@@ -44,7 +44,7 @@ The upcoming v3.0 entered beta and is deployed on [beta.dcrdata.org](https://bet
 
 [decredmarketcap.com](https://decredmarketcap.com/) is a brand new website that shows the most accurate DCR market data. Clean design, mobile friendly, no javascript required.
 
-Dev activity stats for {MONTH}: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({}))
+Dev activity stats for August: 239 active PRs, 219 commits, 25k added and 11k deleted lines spread across 8 repositories. Contributions came from 2-10 developers per repository. ([chart](https://twitter.com/decredproject/status/1037718562842927104))
 
 # Network
 
@@ -194,7 +194,7 @@ An unusual event was the chat about double negatives and other oddities in langu
 
 # Markets
 
-DCR started the month at USD 56 / BTC 0.0073 and had a two week decline. On Aug 14 the whole market took a [huge drop](https://archive.today/K5buy) and briefly went below USD 200B. Bitcoin went below USD 6,000 and top 100 cryptos lost 5-30%. The lowest point coincided with Bitcoin dominance peak at 54.5%. On that day Decred dived -17% and reached the bottom of USD 32 / BTC 0.00537. Since then it went sideways in the USD 35-45 / BTC 0.0054-0.0064 range. Around Aug 24, Huobi showed DCR trading volume above USD 5M and this coincided with a minor recovery.
+DCR started the month at USD 56 / BTC 0.0073 and had a two week decline. On Aug 14 the whole market took a [huge drop](https://archive.today/K5buy) and briefly went below USD 200 billion. Bitcoin went below USD 6,000 and top 100 cryptos lost 5-30%. The lowest point coincided with Bitcoin dominance peak at 54.5%. On that day Decred dived -17% and reached the bottom of USD 32 / BTC 0.00537. Since then it went sideways in the USD 35-45 / BTC 0.0054-0.0064 range. Around Aug 24, Huobi showed DCR trading volume above USD 5M and this coincided with a minor recovery.
 
 [@ImacallyouJawdy](https://twitter.com/ImacallyouJawdy) posted some creative analysis based on ticket data. 
 
