Add Reddit link

--- a/journal/201808.md
+++ b/journal/201808.md
@@ -216,11 +216,11 @@ Finally, unrelated to Decred but good for a laugh: [yetanotherico.com](http://ye
 
 # About This Issue
 
-This is the 5th issue of Decred Journal. It is mirrored on [GitHub](https://xaur.github.io/decred-news/journal/201808) and [Reddit]({}). Past issues are available [here](https://xaur.github.io/decred-news/).
+This is the 5th issue of Decred Journal. It is mirrored on [GitHub](https://xaur.github.io/decred-news/journal/201808) and [Reddit](https://www.reddit.com/r/decred/comments/9dn9ia/decred_journal_august_2018/). Past issues are available [here](https://xaur.github.io/decred-news/).
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
-Feedback is appreciated: please comment on [Reddit]({}), [GitHub](https://github.com/xaur/decred-news/issues) or #writers_room on [Matrix](https://riot.im/app/#/room/!lbzTjhzNbIaDbuAxkS:decred.org) or [Slack](https://decred.slack.com/messages/C9HC2NVTM/).
+Feedback is appreciated: please comment on [Reddit](https://www.reddit.com/r/decred/comments/9dn9ia/decred_journal_august_2018/), [GitHub](https://github.com/xaur/decred-news/issues) or #writers_room on [Matrix](https://riot.im/app/#/room/!lbzTjhzNbIaDbuAxkS:decred.org) or [Slack](https://decred.slack.com/messages/C9HC2NVTM/).
 
 Contributions are welcome too. Some areas are collecting content, pre-release review or translations to other languages. Check out @Richard-Red's [guide](https://medium.com/@richardred/introduction-to-github-for-non-coders-f5614edd64c0) how to contribute to Decred using GitHub without writing code.
 
