Aug18: add marketing report

--- a/journal/201808.md
+++ b/journal/201808.md
@@ -88,6 +88,8 @@ Merchants:
 
 # Marketing
 
+Targeted advertising report for August was posted by @timhebel. Facebook appeal is pending, some Google and Twitter campaigns were paused and some updated. Read more [here](https://www.reddit.com/r/decred/comments/9dv8iy/decred_monthly_advertising_reports_for_august_2018/).
+
 Contribution to the [@decredproject](https://twitter.com/decredproject) Twitter account has evolved over the past few months. A #twitter_ops channel is being used on Matrix to collaboratively draft and execute project account tweets (including retweets). Anyone with an interest in contributing to the Twitter account can ask for an invitation to the channel and can start contributing content and ideas there for evaluation by the Twitter group. As a result, no minority or unilateral veto over tweets is possible. (from [GitHub](https://github.com/decred/dcrweb/pull/332))
 
 # Events
