Add medium link

--- a/journal/201808.md
+++ b/journal/201808.md
@@ -220,7 +220,7 @@ Finally, unrelated to Decred but good for a laugh: [yetanotherico.com](http://ye
 
 # About This Issue
 
-This is the 5th issue of Decred Journal. It is mirrored on [GitHub](https://xaur.github.io/decred-news/journal/201808) and [Reddit](https://www.reddit.com/r/decred/comments/9dn9ia/decred_journal_august_2018/). Past issues are available [here](https://xaur.github.io/decred-news/).
+This is the 5th issue of Decred Journal. It is mirrored on [GitHub](https://xaur.github.io/decred-news/journal/201808), [Medium](https://medium.com/decred/decred-journal-august-2018-48bdb4fb14f) and [Reddit](https://www.reddit.com/r/decred/comments/9dn9ia/decred_journal_august_2018/). Past issues are available [here](https://xaur.github.io/decred-news/).
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
