Fix headings in Jul and Aug

--- a/journal/201807.md
+++ b/journal/201807.md
@@ -2,7 +2,7 @@
 
 ![Decred OSCON team](../img/oscon-300.jpg "Decred OSCON team")
 
-# Development
+## Development
 
 [dcrd](https://github.com/decred/dcrd): Several steps towards [multipeer downloads](https://github.com/decred/dcrd/issues/1145) completed: an [optimization](https://github.com/decred/dcrd/pull/1332) to use in-memory block index and a new 1337 [chain view](https://github.com/decred/dcrd/pull/1337). Maintenance: improved test coverage, upgrading dependency management system and preparing for the upcoming Go 1.11 release.
 
@@ -24,7 +24,7 @@ Trezor: Decrediton integration of initial Trezor support is [in progress](https:
 
 Dev activity stats for July: 252 active PRs, 220 master commits, 34,754 added and 12,847 deleted lines spread across 6 repositories. Contributions came from 6-10 developers per repository. ([chart](https://twitter.com/decredproject/status/1025036517683519488))
 
-# Network
+## Network
 
 Hashrate: the month started at 40.5 and ended at 51.6 PH/s, with a low of 33.3 and a new all time high of 68.4 PH/s. F2Pool is leading with 40-45%, followed by the new BeePool at 15-25% and coinmine.pl at 18-23%.
 
@@ -32,7 +32,7 @@ Staking: 30-day average ticket price is 92.6 DCR (-2.1). The price started the m
 
 Nodes: there are 212 public listening and 216 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 67% on v1.2.0 (+10%), 24% on v1.1.2 (-1%), 7% on v1.1.0 (-7%). Node count data is not perfect but we can see the steady trend of upgrading to v1.2.0. This version of dcrd is notable for serving compact filters. The increased count of such full nodes allows the developers to test SPV client mode in preparations for the upcoming v1.3.0 release.
 
-# ASICs
+## ASICs
 
 Obelisk posted [three updates](https://us16.campaign-archive.com/home/?u=393b2698d17bdfe48ac0422ac&id=87ef82fd96) in July. For the most recent daily updates join their [Discord](https://discord.gg/zt9JznT).
 
@@ -40,7 +40,7 @@ New miner from iBeLink: [DSM7T](https://ibelink.co/product/ibelink-dsm6t-blake25
 
 There were also speculations about the mysterious [Pangolin Whatsminer DCR](https://pangolinminer.com/product/whatsminer-dcr/) with the speed of 44 TH/s at 2,200 W and the cost of $3,888, shipping November. If you know more about it please share with us in #pow-mining channel.
 
-# Integrations
+## Integrations
 
 Meet new [stake pool](https://decred.org/stakepools/): [dcrpool.ibitlin.com](https://dcrpool.ibitlin.com/) has 1% fees and is hosted by [@life](https://decred.slack.com/team/UB0P8MNDA).
 
@@ -55,7 +55,7 @@ StatX [announced](https://twitter.com/statxapp/status/1021498097921388544) Decre
 
 Decred was [added](https://twitter.com/SatoWallet/status/1022103042160832512) to Satowallet with BTC and ETH trading pairs. Caution: do your best to understand the security model before using any wallet software.
 
-# Adoption
+## Adoption
 
 VotoLegal update:
 
@@ -67,7 +67,7 @@ On the OTC trading front, @i2Rav from [i2trading](https://i2trading.com/) report
 
 > We continue to see institutional interest in DCR. Large block buyers love the concept of staking as a way to earn additional income and appreciate the stakeholder rights it affords them. Likening a DCR investment to an activist shareholder/bondholder gives these institutions some comfort while dipping their toes into a burgeoning new asset class.
 
-# Marketing
+## Marketing
 
 Targeted advertising reports released for [June](https://www.reddit.com/r/decred/comments/8xgrv4/monthly_targeted_ads_report/) and [July](https://www.reddit.com/r/decred/comments/95eqno/july_monthly_advertising_reports/). As usual, reach @timhebel for full versions.
 
@@ -77,7 +77,7 @@ After couple weeks Facebook finally responded to the appeal and the next step is
 
 A pack of Stakey Telegram stickers is now [available](https://twitter.com/dcrstakey/status/1021894556978163712). Have fun!
 
-# Events
+## Events
 
 Attended:
 
@@ -95,7 +95,7 @@ Upcoming:
 * [Blockchain & Decentralised Governance Panel](https://www.facebook.com/events/285036208715647/) in Melbourne, Australia on Aug 13. Hosted by YBF Ventures.
 * [Voice of Blockchain](https://chicagoblockchainproject.com/voice-of-blockchain/) in Chicago, USA on Aug 24-25.
 
-# Media
+## Media
 
 Featured articles:
 
@@ -134,7 +134,7 @@ Videos:
 
 * Morning Coins w/ John & Chas Ep. 16 - Intro to Decred, Bitcoin Tech Analysis ([dlive.io](https://dlive.io/livestream/johnspalding/31866eb5-89cd-11e8-92ea-0242ac110003))
 
-# Community Discussions
+## Community Discussions
 
 Community stats: 
 
@@ -161,7 +161,7 @@ Chats: [why](https://riot.im/app/#/room/!wSdymYrEpBhsWlDJuk:decred.org/$15309045
 
 [#dex](https://riot.im/app/#/room/!MfifnUCLrfSeRkMDwZ:decred.org/$153044958530137UiGxN:decred.org) channel continues to attract thinkers and host chats about influence of exchanges, regulation, HFT, lot sizes, liquidity, on-chain vs off-chain swaps, to name a few topics. [#governance](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/$153064378831958rSgqw:decred.org) also keeps growing and hosting high quality conversations.
 
-# Markets
+## Markets
 
 In July DCR was trading in USD 56-76 and BTC 0.0072-0.0109 range. A recovery started after a volume boost of up to $10.5 m on Fex around Jul 13, but once Bitcoin headed towards USD ~8,000 DCR declined along with most altcoins.
 
@@ -169,7 +169,7 @@ WalletInvestor [posted](https://www.reddit.com/r/Dcrtrader/comments/8vhjfu/funda
 
 Decred was noticed in top 10 mineable coins [on coinmarketcap.com](https://coinmarketcap.com/coins/views/filter-non-mineable/).
 
-# Relevant External
+## Relevant External
 
 One million PCs in China were [infected](https://btcmanager.com/one-million-pcs-cryptojacked-in-china-as-hackers-make-2-million-worth-of-digibyte-siacoin-and-decred/) via browser plugins to mine Decred, Siacoin and Digibyte.
 
@@ -191,7 +191,7 @@ On Jul 27 Circle [announced](https://blog.circle.com/2018/07/26/asset-delistings
 
 DCR supply and market cap is now correct on onchainfx.com and finally, on coinmarketcap.com. Thanks to @sumiflow, @jz and others doing the tedious work to reach out the various websites.
 
-# About This Issue
+## About This Issue
 
 This is the 4th issue of Decred Journal. It is mirrored on [GitHub](https://xaur.github.io/decred-news/journal/201807), [Medium](https://medium.com/decred/decred-journal-july-2018-4fe7cb50b2f5) and [Reddit](https://old.reddit.com/r/decred/comments/95541q/decred_journal_july_2018/). Past issues are available [here](https://xaur.github.io/decred-news/).
 
