--- a/journal/201808.md
+++ b/journal/201808.md
@@ -2,7 +2,7 @@
 
 ![Marco at Voice of Blockchain](../img/blockchainvoice-300.jpg "Marco at Voice of Blockchain")
 
-# Development
+## Development
 
 [dcrd](https://github.com/decred/dcrd): Version 1.3.0 RC1 (Release Candidate 1) is out! The main features of this release are significant performance improvements, including some that benefit SPV clients. Full release notes and downloads are [on GitHub](https://github.com/decred/decred-binaries/releases/tag/v1.3.0-rc1).
 
@@ -46,7 +46,7 @@ The upcoming v3.0 entered beta and is deployed on [beta.dcrdata.org](https://bet
 
 Dev activity stats for August: 239 active PRs, 219 commits, 25k added and 11k deleted lines spread across 8 repositories. Contributions came from 2-10 developers per repository. ([chart](https://twitter.com/decredproject/status/1037718562842927104))
 
-# Network
+## Network
 
 Hashrate: went from 54 to 76 PH/s, the low was 50 and the new all-time high is 100 PH/s. BeePool share rose to ~50% while F2Pool shrank to 30%, followed by coinmine.pl at 5% and Luxor at 3%.
 
@@ -54,7 +54,7 @@ Staking: 30-day average ticket price is 95.6 DCR (+3.0) as of Sep 3. During the 
 
 Nodes: there are 217 public listening and 281 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 2% at v1.4.0(pre) (dev builds), 5% on v1.3.0 (RC1), 62% on v1.2.0 (-5%), 22% on v1.1.2 (-2%), 6% on v1.1.0 (-1%). Almost 69% of nodes are v.1.2.0 and higher and support client filters. Data snapshot of Aug 31.
 
-# ASICs
+## ASICs
 
 Obelisk posted 3 [email updates](https://us16.campaign-archive.com/home/?u=393b2698d17bdfe48ac0422ac&id=87ef82fd96) in August. DCR1 units are [reportedly](https://us16.campaign-archive.com/?u=393b2698d17bdfe48ac0422ac&id=43645f11f8) shipping with 1 TH/s hashrate and will be upgraded with firmware to 1.5 TH/s. Batch 1 customers will receive [compensation](https://us16.campaign-archive.com/?u=393b2698d17bdfe48ac0422ac&id=17e8f9480f) for missed shipment dates, but only after Batch 5 ships. Batch 2-5 customers will be receiving the updated [slim design](https://twitter.com/ObeliskTechHQ/status/1034548178056560641).
 
@@ -64,7 +64,7 @@ Innosilicon [announced](https://twitter.com/Inno_Miner/status/102518979723977113
 
 Another newly noticed miner offer is [this](https://signatureit.org/products/decred-dcr-blake256r14-asic-46th-s-2200w-estimated-roi-6-months-30-day-after-electricity) unit that does 46 TH/s at 2,150 W at the price of $4,720. It is shipping Nov 2018 and the stats look very close to [Pangolin Whatsminer DCR](https://pangolinminer.com/product/whatsminer-dcr/) (which has now a page on [asicminervalue](https://www.asicminervalue.com/miners/pangolin/whatsminer-dcr)).
 
-# Integrations
+## Integrations
 
 [www.d1pool.com](https://www.d1pool.com) joined the list of [stakepools](https://decred.org/stakepools/) for a total of 16.
 
@@ -79,20 +79,20 @@ Two mobile wallets integrated Decred:
 
 Reminder: do your best to understand the security and privacy model before using any wallet software. Points to consider: who controls the seed, does the wallet talk to the nodes directly or via middlemen, is it open source or not?
 
-# Adoption
+## Adoption
 
 Merchants:
 
 * [Bit Dials](https://twitter.com/BitDials_eu) [announced](https://twitter.com/BitDials_eu/status/1025116104765726720) DCR support via GloBee at their [bitdials.eu](https://www.bitdials.eu/) luxury boutique. Their separate supercar and classic car shop [bitcars.eu](https://bitcars.eu/) also accepts DCR, either via GloBee or with manual invoicing in case of privacy concerns.
 * [Sheldon Store](https://sheldon.store/) [re-enabled](https://twitter.com/sheldon_store/status/1029495686855839747) DCR payments. The shop sells gift cards for Amazon, iTunes, Netflix and many more.
 
-# Marketing
+## Marketing
 
 Targeted advertising report for August was posted by @timhebel. Facebook appeal is pending, some Google and Twitter campaigns were paused and some updated. Read more [here](https://www.reddit.com/r/decred/comments/9dv8iy/decred_monthly_advertising_reports_for_august_2018/).
 
 Contribution to the [@decredproject](https://twitter.com/decredproject) Twitter account has evolved over the past few months. A #twitter_ops channel is being used on Matrix to collaboratively draft and execute project account tweets (including retweets). Anyone with an interest in contributing to the Twitter account can ask for an invitation to the channel and can start contributing content and ideas there for evaluation by the Twitter group. As a result, no minority or unilateral veto over tweets is possible. (from [GitHub](https://github.com/decred/dcrweb/pull/332))
 
-# Events
+## Events
 
 Attended:
 
@@ -116,7 +116,7 @@ For those willing to help with the events:
 
 > The Decred project is looking for ambassadors. If you are looking for a fun cryptocurrency to get involved in send me a DM or come talk to me on Decred slack. ([@marco_peereboom](https://twitter.com/marco_peereboom/status/1034915961185492992), longer version [here](https://twitter.com/marco_peereboom/status/1034937859432697861))
 
-# Media
+## Media
 
 Decred Assembly episode 21 is [available](https://www.youtube.com/watch?v=hJ2IKjdB6n4). @jy-p and lead dcrwallet developer @jrick discussed SPV from Satoshi's whitepaper, how it can be improved upon and what's coming in Decred.
 
@@ -154,7 +154,7 @@ Videos:
 * Decred review by Ultimate Money ([youtube](https://www.youtube.com/watch?v=qb9amC_Wch0), missed in July issue)
 * Interview with Marco Peereboom by BitBoy Crypto ([youtube](https://www.youtube.com/watch?v=op6d08Yve54))
 
-# Community Discussions
+## Community Discussions
 
 Community stats:
 
@@ -194,13 +194,13 @@ Chats: cross-chain [trading](https://riot.im/app/#/room/!MfifnUCLrfSeRkMDwZ:decr
 
 An unusual event was the chat about double negatives and other oddities in languages in [#trading](https://riot.im/app/#/room/!zxBsqZRxjbQoLqJRwe:decred.org/$153316263048081XBMww:decred.org).
 
-# Markets
+## Markets
 
 DCR started the month at USD 56 / BTC 0.0073 and had a two week decline. On Aug 14 the whole market took a [huge drop](https://archive.today/K5buy) and briefly went below USD 200 billion. Bitcoin went below USD 6,000 and top 100 cryptos lost 5-30%. The lowest point coincided with Bitcoin dominance peak at 54.5%. On that day Decred dived -17% and reached the bottom of USD 32 / BTC 0.00537. Since then it went sideways in the USD 35-45 / BTC 0.0054-0.0064 range. Around Aug 24, Huobi showed DCR trading volume above USD 5M and this coincided with a minor recovery.
 
 [@ImacallyouJawdy](https://twitter.com/ImacallyouJawdy) posted some creative analysis based on ticket data.
 
-# Relevant External
+## Relevant External
 
 StopAndDecrypt [published](https://hackernoon.com/asic-resistance-is-nothing-but-a-blockchain-buzzword-b91d3d770366) an extensive article "ASIC Resistance is Nothing but a Blockchain Buzzword" that is much in line with Decred's stance on ASICs.
 
@@ -218,7 +218,7 @@ Intel and x86 dumpsterfire keeps [burning brighter](https://marc.info/?l=openbsd
 
 Finally, unrelated to Decred but good for a laugh: [yetanotherico.com](http://yetanotherico.com/).
 
-# About This Issue
+## About This Issue
 
 This is the 5th issue of Decred Journal. It is mirrored on [GitHub](https://xaur.github.io/decred-news/journal/201808), [Medium](https://medium.com/decred/decred-journal-august-2018-48bdb4fb14f) and [Reddit](https://www.reddit.com/r/decred/comments/9dn9ia/decred_journal_august_2018/). Past issues are available [here](https://xaur.github.io/decred-news/).
 
