--- a/journal/201809.md
+++ b/journal/201809.md
@@ -4,21 +4,21 @@
 
 ## Development
 
-Final version 1.3.0 of core software was released! Changes are the same as reported in the [previous issue](https://xaur.github.io/decred-news/journal/201808) for the RC1 version, plus some bugfixes that landed in RC2 and the 1.3.0 final. Read the full release notes and grab the downloads [on GitHub](https://github.com/decred/decred-binaries/releases/tag/v1.3.0). As always, don't forget to verify the signatures.
+Final version 1.3.0 of core software was released! Changes are the same as reported in the [previous issue](https://xaur.github.io/decred-news/journal/201808) for the RC1 version, plus some bugfixes that landed in RC2 and the 1.3.0 final. Read the full release notes and grab the downloads [on GitHub](https://github.com/decred/decred-binaries/releases/tag/v1.3.0). As always, don't forget to verify signatures.
 
-[dcrd](https://github.com/decred/dcrd): completed several steps towards [multipeer downloads](https://github.com/decred/dcrd/issues/1145), [improved](https://github.com/decred/dcrd/pull/1447) introduction to the software in the main [README](https://github.com/decred/dcrd/blob/master/README.md), porting of codebase cleanup and refactoring from upstream [btcd](https://github.com/btcsuite/btcd) continues.
+[dcrd](https://github.com/decred/dcrd): completed several steps towards [multipeer downloads](https://github.com/decred/dcrd/issues/1145), [improved](https://github.com/decred/dcrd/pull/1447) introduction to the software in the main [README](https://github.com/decred/dcrd/blob/master/README.md), continued porting cleanups and refactoring from upstream [btcd](https://github.com/btcsuite/btcd).
 
-Currently in review are [initial release](https://github.com/decred/dcrd/pull/1434) of smart [fee estimator](https://github.com/decred/dcrd/issues/1412) and a change to [UTXO set semantics](https://github.com/decred/dcrd/pull/1471). The latter is a large and important change that provides simpler handling, and resolves various issues with the previous approach. A lot of testing and careful review is needed so any help is appreciated.
+Currently in review are [initial release](https://github.com/decred/dcrd/pull/1434) of smart [fee estimator](https://github.com/decred/dcrd/issues/1412) and a change to [UTXO set semantics](https://github.com/decred/dcrd/pull/1471). The latter is a large and important change that provides simpler handling, and resolves various issues with the previous approach. A lot of testing and careful review is needed so any help is welcome.
 
 Educational series for new Decred developers by @matheusd added two episodes: [02 Simnet Setup](https://www.youtube.com/watch?v=QGbsU2PjpLM) shows how to automate simnet management with tmux and [03 Miner Reward Invalidation](https://www.youtube.com/watch?v=ECB8vDzOd1M) explains block validity rules.
 
 [dcrwallet](https://github.com/decred/dcrwallet): bugfixes and RPC improvements to support desktop and mobile wallets.
 
-Developers are welcome to comment on [this idea](https://github.com/decred/dcrwallet/issues/1217) to derive stakepool keys from the HD wallet seed. This would eliminate the need to backup and restore redeem scripts, thus greatly improving wallet UX. (missed in July)
+Developers are welcome to comment on [this idea](https://github.com/decred/dcrwallet/issues/1217) to derive stakepool keys from the HD wallet seed. This would eliminate the need to backup and restore redeem scripts, thus greatly improving wallet UX. (missed in July issue)
 
 [Decrediton](https://github.com/decred/decrediton): bugfixes, refactoring to make the sync process more robust, new [loading animations](https://github.com/decred/decrediton/issues/1612), design polishing.
 
-[Politeia](https://github.com/decred/politeia): multiple [improvements](https://github.com/decred/politeia/pull/472) to the CLI client (more security conscious users with more funds at risk might prefer CLI), security hardening. A [feature](https://github.com/decred/politeia/issues/479) to deprecate or timeout proposals was identified as necessary for initial release, work started. Privacy enhancement to not leak metadata for large ticket holders ([issue](https://github.com/decred/politeia/issues/486), [PR](https://github.com/decred/politeia/pull/487))
+[Politeia](https://github.com/decred/politeia): multiple [improvements](https://github.com/decred/politeia/pull/472) to the CLI client (security conscious users with more funds at risk might prefer CLI), security hardening. A [feature](https://github.com/decred/politeia/issues/479) to deprecate or timeout proposals was identified as necessary for initial release and the work started. Privacy enhancement to not leak metadata of ticket holders ([issue](https://github.com/decred/politeia/issues/486), [PR](https://github.com/decred/politeia/pull/487)).
 
 [Android](https://github.com/decred/dcrandroid): @collins: "Second test release for dcrandroid is out. Major bugs have been fixed since last test. Latest code from SPV sync has been integrated. Once again, bug reports are welcome and issues can be opened [on GitHub](https://github.com/decred/dcrandroid/issues)". Ask on Slack #dev about the APK for testing.
 
